--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server/index.js",
+    "db:setup": "node server/db/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "pg": "^7.4.2"
