--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
-    "db:setup": "node server/db/initDb.js"
+    "db:setup": "node server/db/initDb.js",
+    "build": "webpack -w"
   },
   "repository": {
     "type": "git",
@@ -19,12 +20,20 @@
   },
   "homepage": "https://github.com/hirosato223/software_challenge#readme",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
-    "pg": "^7.4.2"
+    "pg": "^7.4.2",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
