--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/index.js",
+    "start": "nodemon server/index.js",
     "db:setup": "node server/db/initDb.js",
     "build": "webpack -w"
   },
@@ -20,8 +20,6 @@
   },
   "homepage": "https://github.com/hirosato223/software_challenge#readme",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
@@ -33,7 +31,13 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^1.17.4",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.3"
   }
 }
